<resources>
    <string name="app_name">青客IOT</string>
    <string name="gateway">网关</string>
    <string name="lock">门锁</string>
    <string name="ammeter">电表</string>
    <string name="version">网关版本</string>
    <string name="gateway_pare">网关参数</string>
    <string name="hbdat">心跳号</string>
    <string name="hbtime">心跳间隔</string>
    <string name="serip">心跳服务器地址</string>
    <string name="serport">心跳端口</string>
    <string name="wlnum">网关区号</string>
    <string name="si4438pa">433功率</string>

    <string name="set">设置</string>
    <string name="get">获取</string>
    <string name="save">保存</string>

    <string name="time_now">当前时间</string>
    <string name="time_start">开始时间</string>
    <string name="time_end">结束时间</string>

    <string name="add_card">加卡</string>
    <string name="delect_card">删卡</string>
    <string name="add_password">加密码</string>
    <string name="delect_password">删密码</string>
    <string name="electric">电量</string>
    <string name="rssi">RSSI功率</string>
    <string name="timing">校时</string>

    <string name="lock_id">锁号</string>
    <string name="card_id">卡号</string>
    <string name="password">密码</string>


    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="do_you_want_to_open_ble">是否打开蓝牙</string>

    <string name="stop_scan">停止扫描</string>
    <string name="start_scan">开始扫描</string>
    <string name="connect_fail">连接失败</string>
    <string name="connect_success">连接成功</string>
    <string name="disconnected">停止连接</string>
    <string name="please_open_blue">请打开蓝牙</string>
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="help_doc">1.网关参数获取和配置需要连接到青客路由器上才可进行相关操作"\n\n"
        2.只有网关版本大于1.2.2.8，如果查询网关版本号低于1.2.2.8版本，无法通讯"\n\n"
        3.门锁仅适用于蓝牙锁使用，且需要配合乐鑫蓝牙网关才可以使用"\n\n"
        4.电表功能待添加</string>
</resources>
