<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/layout_dialog_add_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:text="@string/do_you_want_to_open_ble"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_dialog_openble_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textSize="20sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray"
            ></View>
        <TextView
            android:id="@+id/layout_dialog_openble_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/confirm"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
