<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <TextView
        android:id="@+id/layout_dialog_add_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="加卡"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGray"
        ></View>
    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/lock_id"/>

        <EditText
            android:id="@+id/layout_dialog_add_card_ed_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@null"
            android:textSize="15sp"
            android:hint="填入要设置的锁号"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        ></View>

    <!--<LinearLayout-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:id="@+id/card_id"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/card_id"/>-->

        <!--<EditText-->
            <!--android:id="@+id/layout_dialog_add_card_ed_card"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@null"-->
            <!--android:textSize="15sp"-->
            <!--android:hint="填入要添加的卡号"-->
            <!--/>-->
    <!--</LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_dialog_add_card_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textSize="20sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray"
            ></View>
        <TextView
            android:id="@+id/layout_dialog_add_card_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/confirm"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
