<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="523dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="39dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_now"
                />
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_start"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_end"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="39dp" />
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="39dp" />
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="match_parent"
                android:background="@color/colorlucency"/>
        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>